--- a/src/ui_ng/src/styles.css
+++ b/src/ui_ng/src/styles.css
@@ -29,3 +29,21 @@
     overflow-y: auto;
     overflow-x: hidden;
 }
+.tooltip-content{white-space: normal;word-wrap: break-word;}
+
+ .alert.alert-warning{
+    padding:10px 12px;
+}
+ .alert-warning .alert-actions button{
+     margin: -2px 0 0px 0;
+}
+ .modal-header{
+     padding: 0;
+ }
+.rotate-90 {
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+}
