Add batch delection code about hole ui

--- a/src/ui_ng/src/app/user/user.component.css
+++ b/src/ui_ng/src/app/user/user.component.css
@@ -39,3 +39,6 @@
 .hide-create {
     visibility: hidden !important;
 }
+.rightPos {
+    position: absolute; right: 20px; margin-top: -15px; height:32px;
+}
