--- a/src/ui_ng/src/app/project/member/member.component.html
+++ b/src/ui_ng/src/app/project/member/member.component.html
@@ -1,6 +1,6 @@
-<div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="top: 8px;">
-        <div class="row flex-items-xs-between">
+<div class="row" style="margin-top: 24px;position: relative;">
+    <div>
+        <div class="row flex-items-xs-between rightPos">
             <div class="flex-xs-middle option-left" style="position: relative; top: 10px;">
             </div>
             <div class="flex-xs-middle option-right">
