--- a/src/ui_ng/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/ui_ng/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -29,8 +29,7 @@
        </ng-template>
        <ng-template [ngSwitchCase]="2">
         <button type="button" class="btn btn-outline"  (click)="cancel()" [hidden]="isDelete">{{'BUTTON.CANCEL' | translate}}</button>
-        <button type="button" class="btn btn-danger" (click)="operate()" [hidden]="isDelete">{{'BUTTON.DELETE' | translate}}</button>
-        <button type="button" class="btn btn-primary" (click)="cancel()" [disabled]="!batchOverStatus"  [hidden]="!isDelete">{{'BUTTON.CLOSE' | translate}}</button>
+        <button type="button" class="btn btn-danger" (click)="confirm()" [hidden]="isDelete">{{'BUTTON.DELETE' | translate}}</button>
        </ng-template>
        <ng-template [ngSwitchCase]="3">
         <button type="button" class="btn btn-primary" (click)="cancel()">{{'BUTTON.CLOSE' | translate}}</button>
