--- a/src/ui_ng/src/app/global-message/message.component.html
+++ b/src/ui_ng/src/app/global-message/message.component.html
@@ -1,4 +1,4 @@
-<div [class.global-message-alert]="!isAppLevel">
+<div [class.global-message-alert]="!isAppLevel && needAuth">
     <clr-alert [clrAlertType]="globalMessage.type" [clrAlertAppLevel]="isAppLevel" [(clrAlertClosed)]="!globalMessageOpened" (clrAlertClosedChange)="onClose()">
         <div class="alert-item">
             <span class="alert-text">{{message}}</span>
