--- a/src/portal/src/app/repository/repository-page.component.html
+++ b/src/portal/src/app/repository/repository-page.component.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 4px;">
+<div>
     <hbr-repository-gridview [projectId]="projectId" [projectName]="projectName" [hasSignedIn]="hasSignedIn"
     [hasProjectAdminRole]="hasProjectAdminRole" [mode]="mode"
     (repoClickEvent)="watchRepoClickEvent($event)"></hbr-repository-gridview>
