--- a/src/portal/src/app/project/member/member.component.scss
+++ b/src/portal/src/app/project/member/member.component.scss
@@ -33,5 +33,12 @@ clr-datagrid {
 :host >>> clr-checkbox.checkbox.datagrid-foot-select {
     position: inherit;
 }
+.content-space {
+    margin-top: 12px;
+    position: relative;
+}
+.datagrid-pt {
+    padding-top: 0;
+}
 
 
