--- a/src/portal/lib/src/create-edit-label/create-edit-label.component.html
+++ b/src/portal/lib/src/create-edit-label/create-edit-label.component.html
@@ -15,7 +15,7 @@
             <label>
                 <label for="color">{{'LABEL.COLOR' | translate}}</label>
                 <clr-dropdown [clrCloseMenuOnItemClick]="false" clrDropdownTrigger>
-                    <clr-icon shape="caret down" class="icon-style"></clr-icon>
+                    <clr-icon shape="caret down" class="btn btn-outline btnColor btn-sm"></clr-icon>
                     <clr-dropdown-menu *clrIfOpen>
                         <label class="dropdown-item" (click)="labelModel.color=i.color" *ngFor="let i of labelColor"
                             [class.borderSty]="i.color == '#FFFFFF'"   [ngStyle]="{'background-color': i.color, 'color': i.textColor }">Aa</label>
