--- a/src/portal/lib/src/create-edit-rule/create-edit-rule.component.scss
+++ b/src/portal/lib/src/create-edit-rule/create-edit-rule.component.scss
@@ -28,6 +28,7 @@ h4 {
 }
 
 .alertLabel {
+    display: block;
     margin-top: 2px;
     line-height: 1em;
     font-size: 12px;
@@ -154,7 +155,6 @@ h4 {
     border-bottom: 1px solid blue;
     line-height: 14px;
     cursor: pointer;
-    margin-left: 12px;
 }
 
 .arrowSet{
@@ -167,7 +167,7 @@ h4 {
 
 clr-modal {
     ::ng-deep div.modal-dialog {
-        width: 29rem;
+        width: 25rem;
     }
 }
 
