Make the replication dialog a little bit wider
Signed-off-by: Cheng <fangyuanc@vmware.com>

--- a/src/portal/lib/src/create-edit-rule/create-edit-rule.component.html
+++ b/src/portal/lib/src/create-edit-rule/create-edit-rule.component.html
@@ -105,7 +105,7 @@
               </select>
             </div>
             <!--on push-->
-            <div formGroupName="schedule_param">
+            <div formGroupName="schedule_param" class="schedule_style">
               <div class="select floatSet" [hidden]="!isScheduleOpt">
                 <select name="scheduleType" formControlName="type" (change)="selectSchedule($event)">
                   <option value="Daily">{{'REPLICATION.DAILY' | translate}}</option>
