--- a/src/portal/lib/src/create-edit-rule/create-edit-rule.component.scss
+++ b/src/portal/lib/src/create-edit-rule/create-edit-rule.component.scss
@@ -32,6 +32,7 @@ h4 {
     margin-top: 2px;
     line-height: 1em;
     font-size: 12px;
+    margin-left: 2px !important;
 }
 
 .inputWidth {
@@ -72,6 +73,10 @@ h4 {
     display: inline-block;
     width: 120px;
     margin-right: 10px;
+}
+
+.schedule_style {
+    display: inline-block;
 }
 
 .floatSet {
@@ -167,7 +172,7 @@ h4 {
 
 clr-modal {
     ::ng-deep div.modal-dialog {
-        width: 25rem;
+        width: 29rem;
     }
 }
 
