--- a/src/portal/lib/src/helm-chart/helm-chart.component.html
+++ b/src/portal/lib/src/helm-chart/helm-chart.component.html
@@ -27,6 +27,9 @@
                     <button type="button" class="btn btn-sm btn-secondary" [disabled]="!developerRoleOrAbove" (click)="onChartUpload()">
                             <clr-icon shape="upload" size="16"></clr-icon>&nbsp;{{'HELM_CHART.UPLOAD' | translate}}
                     </button>
+                    <button type="button" class="btn btn-sm btn-secondary" [disabled]="!hasProjectAdminRole" (click)="openChartDeleteModal(selectedRows)">
+                        <clr-icon shape="delete" size="16"></clr-icon>&nbsp;{{'BUTTON.DELETE' | translate}}
+                    </button>
                 </clr-dg-action-bar>
                 <clr-dg-column >{{'HELM_CHART.NAME' | translate}}</clr-dg-column>
                 <clr-dg-column >{{'HELM_CHART.STATUS' | translate}}</clr-dg-column>
@@ -86,6 +89,7 @@
             <span class="spinner"></span>
         </div>
     </div>
+    <confirmation-dialog #confirmationDialog (confirmAction)="confirmDeletion($event)"></confirmation-dialog>
     <clr-modal [(clrModalOpen)]="isUploadModalOpen" [clrModalStaticBackdrop]="true" [clrModalClosable]="false">
         <h3 class="modal-title">{{'HELM_CHART.UPLOAD_TITLE' | translate | titlecase}}</h3>
         <div class="modal-body">
