--- a/src/portal/lib/src/image-name-input/image-name-input.component.scss
+++ b/src/portal/lib/src/image-name-input/image-name-input.component.scss
@@ -1,27 +1,31 @@
-.selectBox {
+.clr-form {
+    width:100%;
+}
+
+.select-box {
     position: absolute;
     width: 100%;
     height: auto;
-    border: 1px solid #ccc;
     background-color: white;
     border: 1px solid rgba(0, 0, 0, .15);
     border-right-width: 2px;
     border-bottom-width: 2px;
     border-radius: 6px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-    z-index: 100;
-}
 
-.selectBox ul li {
-    list-style: none;
-    padding: 3px 20px;
-    cursor: pointer;
-}
+    ul {
+        li {
+            list-style: none;
+            padding: 3px 20px;
+            cursor: pointer;
 
-.selectBox ul li:hover {
-    color: #262626;
-    background-image: linear-gradient(180deg, #f5f5f5 0, #e8e8e8);
-    background-repeat: repeat-x;
+            &:hover {
+                color: #262626;
+                background-image: linear-gradient(180deg, #f5f5f5 0, #e8e8e8);
+                background-repeat: repeat-x;
+            }
+        }
+    }
 }
 
 .clr-input-wrapper {
@@ -31,16 +35,18 @@
 
 .wrap-label {
     display: block;
+
+    input {
+        width: 100%;
+    }
 }
 
-.wrap-label input {
-    width: 100%;
-}
-
-label.required:after {
-    content: '*';
-    font-size: .58479532rem;
-    line-height: .5rem;
-    color: #c92100;
-    margin-left: .25rem;
+label.required {
+    &:after {
+        content: '*';
+        font-size: .58479532rem;
+        line-height: .5rem;
+        color: #c92100;
+        margin-left: .25rem;
+    }
 }
