Add unit test of build history section. Move style to scss file.
Signed-off-by: Frank Kung <kfanjian@gmail.com>

--- a/src/portal/lib/src/tag/tag-history.component.html
+++ b/src/portal/lib/src/tag/tag-history.component.html
@@ -1,5 +1,5 @@
 <clr-datagrid [clrDgLoading]="loading">
-    <clr-dg-column style="width: 160px;">{{ 'TAG.CREATION' | translate }}</clr-dg-column>
+    <clr-dg-column class="history-time">{{ 'TAG.CREATION' | translate }}</clr-dg-column>
     <clr-dg-column>{{ 'TAG.COMMAND' | translate }}</clr-dg-column>
 
     <clr-dg-row *clrDgItems="let h of history" [clrDgItem]='h' class="history-item">
