--- a/src/portal/src/app/account/sign-in/sign-in.component.scss
+++ b/src/portal/src/app/account/sign-in/sign-in.component.scss
@@ -27,10 +27,6 @@
     border-left: 1px solid #eee;
 }
 
-.login-wrapper-override {
-    flex-wrap: wrap;
-}
-
 .repo-container {
     width: 100%;
     margin-top: -210px;
@@ -48,4 +44,20 @@
     position: relative;
     top: -9px;
 }
-.bg{position: absolute;top: 60px; right: 0px;width: 100%; height: 100%; background-size: cover;}
+.bg{
+    position: absolute;
+    top: 60px; 
+    right: 0px;
+    width: 100%; 
+    height: 100%; 
+    background-size: cover;
+}
+
+.login-wrapper {
+    background: transparent;
+    flex-wrap: wrap;
+    margin-top:-20px;
+    .login {
+        background:transparent;
+    }
+}
