Allow developers and project admins administrators to download the harbor certs from UI.
Signed-off-by: FangyuanCheng <fangyuanc@vmware.com>

--- a/src/portal/lib/src/repository-gridview/repository-gridview.component.html
+++ b/src/portal/lib/src/repository-gridview/repository-gridview.component.html
@@ -3,6 +3,10 @@
         <div class="toolbar">
             <div class="row flex-items-xs-right option-right rightPos">
                 <div class="flex-xs-middle">
+                    <a #certDownloadLink [href]="downloadLink" target="_blank" class="btn btn-link btn-font download-link">
+                        <clr-icon shape="download"></clr-icon>
+                        {{'CONFIG.REGISTRY_CERTIFICATE' | translate | uppercase}}
+                    </a>
                     <hbr-push-image-button style="display: inline-block;" [registryUrl]="registryUrl" [projectName]="projectName"></hbr-push-image-button>
                     <hbr-filter [withDivider]="true" filterPlaceholder="{{'REPOSITORY.FILTER_FOR_REPOSITORIES' | translate}}" (filterEvt)="doSearchRepoNames($event)" [currentValue]="lastFilteredRepoName"></hbr-filter>
                     <span class="card-btn" (click)="showCard(true)" (mouseenter) ="mouseEnter('card') "  (mouseleave) ="mouseLeave('card')">
