--- a/src/portal/lib/src/helm-chart/versions/helm-chart-version.component.scss
+++ b/src/portal/lib/src/helm-chart/versions/helm-chart-version.component.scss
@@ -33,6 +33,12 @@
     }
 }
 
+clr-dg-action-bar {
+    clr-dropdown{
+        @include dropdown-as-action-button;
+    }
+}
+
 .card-container {
     margin-top: 21px;
     .card-header {
