--- a/src/portal/lib/src/tag/tag.component.scss
+++ b/src/portal/lib/src/tag/tag.component.scss
@@ -1,3 +1,5 @@
+@import "../mixin";
+
 .option-right {
   padding-right: 18px;
   padding-bottom: 6px;
@@ -132,7 +134,7 @@
 }
 
 .dropdown .dropdown-toggle.btn {
-  margin: .25rem .5rem .25rem 0;
+  @include dropdown-as-action-button;
 }
 
 .labelFilterPanel {
