--- a/src/portal/lib/src/helm-chart/versions/helm-chart-version.component.scss
+++ b/src/portal/lib/src/helm-chart/versions/helm-chart-version.component.scss
@@ -39,6 +39,10 @@ clr-dg-action-bar {
     }
 }
 
+hbr-resource-label-signpost {
+    display: inline-block;
+}
+
 .card-container {
     margin-top: 21px;
     .card-header {
