add login page image
Signed-off-by: Meina Zhou <meinaz@vmware.com>

--- a/src/portal/src/app/account/sign-in/sign-in.component.scss
+++ b/src/portal/src/app/account/sign-in/sign-in.component.scss
@@ -54,7 +54,9 @@
 }
 
 .login-wrapper {
-    background: transparent;
     flex-wrap: wrap;
     margin-top:-20px;
+    .login {
+        background:transparent;
+    }
 }
